--- a/style.css
+++ b/style.css
@@ -23,10 +23,10 @@ body {
 	z-index: 0;
 
 	text-align: center;
-	align-content: center;
+	/* align-content: center; */
 
 	font-family:Georgia, 'Times New Roman', Times, serif;
-	font-size: 1.1em;
+	font-size: 1.3em;
 	font-weight: normal;
 
 	-webkit-text-stroke: 1px #000000;
