--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 	display: grid;
 	grid-template-columns: 1fr 5fr;
 	grid-template-rows: 66px;
+	align-items: center;
 }
 
 .description_box {
@@ -44,6 +45,7 @@ body {
 	font-weight: normal;
 
 	text-align: center;
+	align-content: center;
 
 	/* -webkit-text-stroke: 1px #000000; */
 	color: #f64c72;
@@ -61,6 +63,7 @@ body {
 }
 
 .inner {
+	align-items: center;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	grid-template-rows: 200px 200px 200px;
