--- a/style.css
+++ b/style.css
@@ -17,13 +17,37 @@ body {
 	align-items: center;
 }
 
+.category_text {
+	grid-column: 1 / 6;
+
+	text-align: center;
+	align-content: center;
+
+	font-family:Georgia, 'Times New Roman', Times, serif;
+	color: #f3f5fa;
+	background-color: #425cbb;
+}
+
+.item_grid {
+	display: grid;
+	align-items: center;
+	grid-template-columns: 1fr 8fr 1fr 1.3fr 1fr;
+	grid-template-rows: 20px 80px;
+}
+
+.item_text {
+	text-align: center;
+	font-family:Georgia, 'Times New Roman', Times, serif;
+	color: #2248a7;
+}
+
 .description_box {
-	display: flex;
+	display: grid;
 	flex-direction: column;
+	grid-template-rows: 25px 25px;
   }
 
 .head_bg {
-	display: grid;
 	grid-column: 2 / 2;
 	grid-row: 1 / 2	;
 	z-index: 0;
@@ -40,6 +64,8 @@ body {
 }
 
 .text_description_head {
+	grid-column: 1 / 2;
+	grid-row: 1 / 2	;
 	font-family:Georgia, 'Times New Roman', Times, serif;
 	font-size: 1.1em;
 	font-weight: normal;
@@ -52,6 +78,8 @@ body {
 }
 
 .text_description {
+	grid-column: 1 / 2;
+	grid-row: 2 / 2	;
 	font-family:Georgia, 'Times New Roman', Times, serif;
 	font-size: 1.1em;
 	font-weight: normal;
