--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 	display: grid;
 	align-items: center;
 	grid-template-columns: 1fr 8fr 1fr 1.3fr 1fr;
-	grid-template-rows: 20px 80px;
+	grid-template-rows: min-content;
 }
 
 .item_text {
@@ -44,7 +44,7 @@ body {
 .description_box {
 	display: grid;
 	flex-direction: column;
-	grid-template-rows: 25px 25px;
+	grid-template-rows: max-content;
   }
 
 .head_bg {
