--- a/style.css
+++ b/style.css
@@ -45,6 +45,8 @@ body {
 	display: grid;
 	flex-direction: column;
 	grid-template-rows: max-content;
+	margin-top: 5px;
+	margin-bottom: 5px;
   }
 
 .head_bg {
