--- a/style.css
+++ b/style.css
@@ -27,8 +27,8 @@ body {
 	color: #f3f5fa;
 	background-color: #425cbb;
 
-	margin-top: 1px;
-	margin-bottom: 1px;
+	margin-top: 5px;
+	margin-bottom: 5px;
 }
 
 .item_grid {
@@ -40,6 +40,7 @@ body {
 
 .item_text {
 	text-align: center;
+	font-size: small;
 	font-family:Georgia, 'Times New Roman', Times, serif;
 	color: #2248a7;
 }
@@ -119,7 +120,7 @@ body {
 
 .btn {
 	display: inline-block;
-	padding: 10px 20px;
+	padding: 8px 16px;
 	border: none;
 	background: rgb(248, 168, 24);
 	border-radius: 10px;
