--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-	margin: 0;
+	margin-left: 1px;
+	margin-right: 1px;
 	padding: 0;
 	font-size: 18px;
 	color: var(--tg-theme-text-color);
@@ -27,8 +28,8 @@ body {
 	color: #f3f5fa;
 	background-color: #425cbb;
 
-	margin-top: 5px;
-	margin-bottom: 5px;
+	margin-top: 2px;
+	margin-bottom: 2px;
 }
 
 .item_grid {
@@ -43,6 +44,8 @@ body {
 	font-size: small;
 	font-family:Georgia, 'Times New Roman', Times, serif;
 	color: #2248a7;
+
+	margin-right: 2px;
 }
 
 .description_box {
@@ -104,6 +107,10 @@ body {
 
 .img_crown {
 	width:64px;
+}
+
+.item_img {
+	align-content: center;
 }
 
 .item_crown {
