--- a/style.css
+++ b/style.css
@@ -72,6 +72,12 @@ body {
 	color: #fffc67;
 }
 
+a.item_text:active, /* активная/посещенная ссылка */
+a.item_text:hover,  /* при наведении */
+a.item_text {
+  text-decoration: none;
+}
+
 .text_description_head {
 	grid-column: 1 / 2;
 	grid-row: 1 / 2	;
@@ -129,7 +135,7 @@ body {
 	display: inline-block;
 	padding: 8px 16px;
 	border: none;
-	background: rgb(248, 168, 24);
+	background: rgb(5, 79, 89);
 	border-radius: 10px;
 	color: #fff;
 	text-transform: uppercase;
