--- a/descriptions/descr_style.css
+++ b/descriptions/descr_style.css
@@ -60,7 +60,7 @@ a.arrow-left {
     font-size: 0.9em;
 
 	font-family:Georgia, 'Times New Roman', Times, serif;
-	color: #04102e;
+	color: rgb(17, 179, 200);
 
 	margin-top: 2px;
 	margin-bottom: 2px;
@@ -132,8 +132,8 @@ a.arrow-left {
 
 .arrow-left span {
     display: block;
-    width: 5px;
-    height: 5px;
+    width: 4px;
+    height: 4px;
     border-bottom: 4px solid #3191ff;
     border-left: 4px solid #3191ff;
    
