--- a/descriptions/descr_style.css
+++ b/descriptions/descr_style.css
@@ -88,7 +88,7 @@ a.arrow-left {
 	text-align: center;
 	font-size: small;
 	font-family:Georgia, 'Times New Roman', Times, serif;
-	color: #225ae7;
+	color: rgb(0, 84, 209);
 
 	margin-right: 2px;
 }
