--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
 	text-align: center;
 	font-size: small;
 	font-family:Georgia, 'Times New Roman', Times, serif;
-	color: #225ae7;
+	color: rgb(0, 84, 209);
 
 	margin-right: 2px;
 }
