--- a/descriptions/descr_style.css
+++ b/descriptions/descr_style.css
@@ -87,8 +87,9 @@ a.arrow-left {
 .item_text {
 	text-align: center;
 	font-size: small;
+    font-weight: bold;
 	font-family:Georgia, 'Times New Roman', Times, serif;
-	color: rgb(0, 84, 209);
+	color: #054f59;
 
 	margin-right: 2px;
 }
