--- a/descriptions/descr_style.css
+++ b/descriptions/descr_style.css
@@ -89,7 +89,7 @@ a.arrow-left {
 	font-size: small;
     font-weight: bold;
 	font-family:Georgia, 'Times New Roman', Times, serif;
-	color: #054f59;
+	color: rgb(17, 179, 200);
 
 	margin-right: 2px;
 }
