--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
 	font-size: small;
 	font-weight: bold;
 	font-family:Georgia, 'Times New Roman', Times, serif;
-	color: #054f59;;
+	color: rgb(17, 179, 200);
 
 	margin-right: 2px;
 }
