--- a/descriptions/descr_style.css
+++ b/descriptions/descr_style.css
@@ -63,7 +63,7 @@ a.arrow-left {
 	color: rgb(17, 179, 200);
 
 	margin-top: 2px;
-	margin-bottom: 2px;
+	margin-bottom: 4px;
 }
 
 .category_text {
@@ -98,7 +98,7 @@ a.arrow-left {
 	display: inline-block;
 	padding: 8px 16px;
 	border: none;
-	background: rgb(5, 79, 89);
+	background: #425cbb;
 	border-radius: 10px;
 	color: #fff;
 	text-transform: uppercase;
